profile picture adjusments

--- a/css/styles.css
+++ b/css/styles.css
@@ -8162,6 +8162,8 @@ textarea.form-control-lg {
 
 .text-uppercase {
   text-transform: uppercase !important;
+  font-size: 16px !important; 
+  letter-spacing: 2px !important;
 }
 
 .text-capitalize {
@@ -11588,7 +11590,7 @@ html {
   max-width: 40rem;
 }
 .profile .profile-img {
-  height: 80vw;
+  height: 90vw;
   max-height: 45rem;
   position: absolute;
   bottom: 0;
@@ -11638,7 +11640,7 @@ html {
     width: 60vw;
   }
   .profile .profile-img {
-    height: 65vw;
+    height: 75vw;
   }
   .profile .dots-1 {
     width: 3vw;
@@ -11663,7 +11665,7 @@ html {
     width: 50vw;
   }
   .profile .profile-img {
-    height: 55vw;
+    height: 65vw;
   }
   .profile .dots-1 {
     width: 3vw;
@@ -11688,7 +11690,7 @@ html {
     width: 40vw;
   }
   .profile .profile-img {
-    height: 45vw;
+    height: 50vw;
   }
   .profile .dots-1 {
     width: 1.5vw;
@@ -11713,7 +11715,7 @@ html {
     width: 35vw;
   }
   .profile .profile-img {
-    height: 40vw;
+    height: 45vw;
   }
   .profile .dots-1 {
     width: 1.5vw;
