--- a/css/styles.css
+++ b/css/styles.css
@@ -8242,7 +8242,7 @@ textarea.form-control-lg {
 
 .text-muted {
   --bs-text-opacity: 1;
-  color: #6c757d !important;
+  color: #5a6268 !important;
 }
 
 .text-black-50 {
@@ -11588,14 +11588,23 @@ html {
   margin-top: 5vw;
   max-height: 40rem;
   max-width: 40rem;
+  /*new*/
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 .profile .profile-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /*
   height: 90vw;
   max-height: 45rem;
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%);*/
 }
 .profile .dots-1 {
   position: absolute;
