--- a/css/styles.css
+++ b/css/styles.css
@@ -8162,8 +8162,8 @@ textarea.form-control-lg {
 
 .text-uppercase {
   text-transform: uppercase !important;
-  font-size: 16px !important; 
-  letter-spacing: 2px !important;
+  font-size: 16px; 
+  letter-spacing: 2px;
 }
 
 .text-capitalize {
