--- a/css/styles.css
+++ b/css/styles.css
@@ -8161,10 +8161,11 @@ textarea.form-control-lg {
 }
 
 .text-uppercase {
-  text-transform: uppercase !important;
-  font-size: 16px; 
-  letter-spacing: 2px;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  font-size: clamp(0.8rem, 1.5vw, 1rem);
 }
+
 
 .text-capitalize {
   text-transform: capitalize !important;
