--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,11 @@
  */
 
 :root {
-   --bs-primary: #3a0ca3; /* Electric Violet */
-  --bs-secondary: #4361ee; /* Bright Azure Blue */
-  --bs-accent: #f72585; /* Futuristic Magenta */
-  --bs-primary-rgb: 58, 12, 163;
-  --bs-secondary-rgb: 67, 97, 238;
+   --bs-primary: #439A97; 
+  --bs-secondary: #62B6B7; 
+  --bs-accent: #97DECE; 
+  --bs-primary-rgb: 67, 154, 151;
+  --bs-secondary-rgb: 98, 182, 183;
   --bs-link-color: var(--bs-secondary);
   --bs-link-hover-color: var(--bs-accent);
   --bs-gradient: linear-gradient(135deg, var(--bs-primary), var(--bs-secondary), var(--bs-accent));
@@ -4284,6 +4284,9 @@ textarea.form-control-lg {
 .card-img-top,
 .card-img-bottom {
   width: 100%;
+    height: 100%;             /* Make image take full height of the card */
+  object-fit: cover;        /* Cover ensures the image fills the card without stretching */
+  border-radius: var(--bs-card-inner-border-radius);
 }
 
 .card-img,
