--- a/css/styles.css
+++ b/css/styles.css
@@ -11599,24 +11599,43 @@ html {
   margin-top: 5vw;
   max-height: 40rem;
   max-width: 40rem;
+  /*new*/
    display: flex;
-   /*new*/
   justify-content: center;
   align-items: center;
   overflow: hidden;
 }
 .profile .profile-img {
-  /*new*/
   width: 100%;
   height: 100%;
   object-fit: cover;
+  /*
+  height: 90vw;
+  max-height: 45rem;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);*/
+}
+
+/*.profile {
+  position: relative;
+  height: 75vw;
+  width: 75vw;
+  border-radius: 5vw;
+  margin-top: 5vw;
+  max-height: 40rem;
+  max-width: 40rem;
+
+}
+.profile .profile-img {
   height: 80vw;
   max-height: 45rem;
   position: absolute;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-}
+}*/
 .profile .dots-1 {
   position: absolute;
   width: 3vw;
