--- a/css/styles.css
+++ b/css/styles.css
@@ -3186,19 +3186,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-dark {
-  --bs-btn-color: #212529;
-  --bs-btn-border-color: #212529;
+  --bs-btn-color: #483AA0;
+  --bs-btn-border-color: #483AA0;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #212529;
-  --bs-btn-hover-border-color: #212529;
+  --bs-btn-hover-bg: #483AA0;
+  --bs-btn-hover-border-color: #483AA0;
   --bs-btn-focus-shadow-rgb: 33, 37, 41;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #212529;
-  --bs-btn-active-border-color: #212529;
+  --bs-btn-active-bg: #483AA0;
+  --bs-btn-active-border-color: #483AA0;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #212529;
+  --bs-btn-disabled-color: #483AA0;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #212529;
+  --bs-btn-disabled-border-color: #483AA0;
   --bs-gradient: none;
 }
 
@@ -11692,6 +11692,7 @@ background: linear-gradient(315deg, #439A97 0%, #7965C1 100%);
   margin-top: 5vw;
   max-height: 40rem;
   max-width: 40rem;
+  overflow: hidden!important;
 }
 .profile .profile-img {
   height: 80vw;
@@ -11717,7 +11718,7 @@ background: linear-gradient(315deg, #439A97 0%, #7965C1 100%);
   top: 6.05vw;
 }
 .profile .dots-2 svg {
-  fill: #1e30f3;
+  fill: #483AA0;
 }
 .profile .dots-3 {
   position: absolute;
@@ -11735,7 +11736,7 @@ background: linear-gradient(315deg, #439A97 0%, #7965C1 100%);
   bottom: 4vw;
 }
 .profile .dots-4 svg {
-  fill: #1e30f3;
+  fill: #483AA0;
 }
 
 @media (min-width: 576px) {
@@ -11843,6 +11844,12 @@ background: linear-gradient(315deg, #439A97 0%, #7965C1 100%);
     background: #439A97; /* Tarayıcı gradyanı desteklemezse görülecek sabit renk */
     background: -webkit-linear-gradient(315deg, #439A97 0%, #7965C1 100%);
     background: linear-gradient(315deg, #439A97 0%, #7965C1 100%);
+    /* YENİ: Kenarları yuvarlaklaştırma */
+    border-radius: 10px; /* İstediğiniz yuvarlaklık derecesini ayarlayın (örneğin 10px) */
+    
+    /* YENİ (Opsiyonel): Dolgu ayarı */
+    padding-top: 0.5rem; 
+    padding-bottom: 0.5rem;
 }
 
 /* Navbar içindeki tüm link ve metinleri okunabilirlik için beyaz yapın */
@@ -11850,5 +11857,18 @@ background: linear-gradient(315deg, #439A97 0%, #7965C1 100%);
 .navbar-gradient .nav-link,
 .navbar-gradient .navbar-brand {
     color: #fff !important; 
+}
+/* Projects görsellerinin boyutunu kontrol etmek için yeni sınıflar */
+.w-40 {
+    width: 40% !important;
+}
+
+.w-60 {
+    width: 60% !important;
+}
+
+/* Bu görsellerin dikeyde tam ortalanmasını sağlayın */
+.w-40 img {
+    max-height: 100%;
 }
 }
