--- a/css/styles.css
+++ b/css/styles.css
@@ -11924,19 +11924,21 @@ background: linear-gradient(315deg, #439A97 0%, #7965C1 100%);
         padding: 0; 
         min-height: 12rem; /* Mobil görsel yüksekliği */
     }
-    .project-img-container img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        /* Kartın üst kenarlarını yuvarlama */
-        border-top-left-radius: calc(1rem - 1px);
-        border-top-right-radius: calc(1rem - 1px);
-    }
+    /* Mobil Görünüm CSS Kuralları (CSS dosyanızdaki ilgili yere ekleyin/değiştirin) */
+.project-img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+    /* YENİ: Üst köşeler 0, alt köşeler yuvarlak olmalı */
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: calc(0.25rem - 1px); /* Kartın alt sol yuvarlağını alır */
+    border-bottom-right-radius: calc(0.25rem - 1px); /* Kartın alt sağ yuvarlağını alır */
+}
     
     /* Metin içeriğini üstte tutmak için Kart 1'e verdiğimiz flex-column-reverse'ü iptal et */
     /* Kart 1 ve 3'ün mobil görünümde görseli üste almasını sağlar */
-    .card .d-flex.flex-column-reverse {
-        flex-direction: column !important;
-    }
+
 }
 }
